crates/reinhardt-core/macros/tests/ui/hook/fail/hook_generic_struct.rs
use reinhardt_macros::hook;

#[hook(on = runserver)]
struct MyHook<T>;

fn main() {}
