crates/reinhardt-core/macros/tests/ui/hook/fail/hook_generic_struct.stderr
error: #[hook] does not support generic structs
 --> tests/ui/hook/fail/hook_generic_struct.rs:4:14
  |
4 | struct MyHook<T>;
  |              ^^^
